--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "mongodb": "^5.6.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
