--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "bcrypt": "^5.1.0",
     "mongodb": "^5.6.0",
     "next": "13.4.7",
